manifests/homeassistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    component: homeassistant
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      component: homeassistant
  template:
    metadata:
      labels:
        component: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:stable
          volumeMounts:
            - name: config
              mountPath: '/config/configuration.yaml'
              subPath: 'configuration.yaml'
              readOnly: true
          ports:
            - name: web
              containerPort: 8123
      volumes:
        - name: config
          configMap:
            name: homeassistant-config
