manifests/homeassistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: 'homeassistant.durbn.xyz'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: homeassistant-service
                port:
                  name: web
